2004-07-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Debian Bug#259053
	* doc/FAQ.html, doc-jp/FAQ.html: ~/.mailcap -> ~/.w3m/mailcap

2004-05-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* based on [w3m-dev 04079]
	  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
	* Makefile.in: (libwc/libwc.a): always make in libwc subdir
		(w3mimg/w3mimg.a): always make in w3mimg subdir

2004-05-03  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 01007]
	* libwc/Makefile.in (CFLAGS): need @CPPFLAGS@

2004-05-03  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version

2004-04-29  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.5.1
	* version.c.in: update
	* doc/README: version 0.5, release date, maintainer
	* doc-jp/README: ditto
	* NEWS: update
	* configure.in: version 0.5.1
	* po/w3m.pot, ja.po: update-po

2004-04-27  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>

	* [w3m-dev 04068] install-sh problem
	 [w3m-dev 04069] install-sh problem 2
	* Makefile.in (MAKE_ARGS): delete INSTALL
	* install-sh: replace with X Consortium install-sh (from automake)

2004-04-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 04073] Re: run configure in another directory
	* Makefile.in (CFLAGS): include dir here
		(DEFS): delete include dirs
		(libwc/libwc.a): pass OPTS only
		(w3mimg/w3mimg.a): pass OPTS only
	* libwc/Makefile.in (CFLAGS): fixed
	* w3mimg/Makefile.in (CFLAGS): added
		(fb x11): pass OPTS only
	* w3mimg/fb/Makefile.in (CFLAGS): added
	* w3mimg/x11/Makefile.in (CFLAGS): added

2004-04-23  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>

	* [w3m-dev 04066] --disable-color
	* rc.c (load_option_panel): #ifdef USE_COLOR

2004-04-22  Masao Uebayashi <uebayasi@pultek.co.jp>

	* fix build error for --enable-m17n --disable-unicode
	* libwc/detect.c (wc_create_detect_map): #ifdef USE_UNICODE

2004-04-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 04064] authentication
	 closes: Bug#:244029: w3m: HTTP basic authentication annoyance
	* fm.h (auth_cookie): deleted